--- a/templates/index.html
+++ b/templates/index.html
@@ -5,4 +5,36 @@
 {% block content %}
     <h2>Get started!</h2>
     <p>First time here? Register to start using AirChat</p>
+
+    <form action="{{ url_for('index') }}", method="POST">
+        <div>
+            {{ form.username(class_='form-control', placeholder='Username', autocomplete='off', autofocus=true)}}
+             <ul>
+                 {% for error in form.username.errors %}
+                    <li> {{ error }}</li>
+                 {% endfor %}
+             </ul>
+        </div>
+        <div>
+            {{ form.password(class_='form-control', placeholder='Password')}}
+            <ul>
+                {% for error in form.password.errors %}
+                   <li> {{ error }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div>
+            {{ form.confirm_pswd(class_='form-control', placeholder='Retype Password')}}
+            <ul>
+                {% for error in form.confirm_pswd.errors %}
+                   <li> {{ error }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div>
+            {{ form.submit_button }}
+        </div>
+
+        {{ form.csrf_token }}
+    </form>
 {% endblock %}
