--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% from 'form_helper.html' import displayField %}
 {% extends "prelogin-layout.html" %}
 
 {% block title %}Register{% endblock title%}
@@ -7,34 +8,12 @@
     <p>First time here? Register to start using AirChat</p>
 
     <form action="{{ url_for('index') }}", method="POST">
-        <div>
-            {{ form.username(class_='form-control', placeholder='Username', autocomplete='off', autofocus=true)}}
-             <ul>
-                 {% for error in form.username.errors %}
-                    <li> {{ error }}</li>
-                 {% endfor %}
-             </ul>
+        {{ displayField(form.username, 'Username', autocomplete="off", autofocus=true) }}
+        {{ displayField(form.password, 'Password') }}
+        {{ displayField(form.confirm_pswd, 'Retype Password') }}
+        <div class="form-group">
+            <input type="submit" value="Create" class="btn btn-warning">
         </div>
-        <div>
-            {{ form.password(class_='form-control', placeholder='Password')}}
-            <ul>
-                {% for error in form.password.errors %}
-                   <li> {{ error }}</li>
-                {% endfor %}
-            </ul>
-        </div>
-        <div>
-            {{ form.confirm_pswd(class_='form-control', placeholder='Retype Password')}}
-            <ul>
-                {% for error in form.confirm_pswd.errors %}
-                   <li> {{ error }}</li>
-                {% endfor %}
-            </ul>
-        </div>
-        <div>
-            {{ form.submit_button }}
-        </div>
-
         {{ form.csrf_token }}
     </form>
 {% endblock %}
