--- a/templates/prelogin-layout.html
+++ b/templates/prelogin-layout.html
@@ -19,7 +19,12 @@
     <body>
         <!-- Main section start -->
         <div class="main-section">
-
+                <!-- Flash Messages -->
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        Category: {{messages[0][0]}} || {{ messages[0][1] }}
+                    {% endif %}
+                {% endwith %}
 
                 {% block content%}
                 {% endblock %}
