predefined rooms now working

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -52,10 +52,10 @@
 
                 <!-- Sidebar start (Room Selection) -->
                 <nav id="sidebar">
-                    <!-- <h4>Rooms</h4>
+                    <h4>Rooms</h4>
                     {% for room in rooms %}
-                        <p id="{{ room|title }}" class="select-room cursor-pointer">{{ room|title }}</p>
-                    {% endfor %} -->
+                        <p id="{{ room|title }}" class="select-room">{{ room|title }}</p> <!--Turns room names into title case-->
+                    {% endfor %}
                 </nav>
                 <!-- Sidebar end -->
 
