--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
     <h2>Get started!</h2>
     <p>First time here? Register to start using AirChat</p>
 
-    <form action="{{ url_for('index') }}", method="POST">
+    <form action="{{ url_for('auth.signup') }}", method="POST">
         {{ displayField(form.username, 'Username', autocomplete="off", autofocus=true) }}
         {{ displayField(form.password, 'Password') }}
         {{ displayField(form.confirm_pswd, 'Retype Password') }}
