--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,7 +7,7 @@
     <h2>Login now!</h2>
     <p>Enter you username/password to start AirChat</p>
 
-    <form action="{{ url_for('login') }}", method="POST">
+    <form action="{{ url_for('auth.login') }}", method="POST">
         {{ displayField(form.username, 'Username', autocomplete="off", autofocus=true) }}
         {{ displayField(form.password, 'Password') }}
         <!-- <div class="form-group">
@@ -21,5 +21,5 @@
 
     <hr>
 
-    <p>Have not registered? <a href="{{url_for('index')}}">Register here</a>.</p>
+    <p>Have not registered? <a href="{{url_for('auth.signup')}}">Register here</a>.</p>
 {% endblock %}
