--- a/app/static/styles/chat_style.css
+++ b/app/static/styles/chat_style.css
@@ -1,3 +1,18 @@
+body{
+    background-color: #d4e4e9;
+}
+#chat-window-header{
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    background-color: #19303f;
+    margin: 4px 0 0 0;
+    padding: 15px 10px 7px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.leave-chat{
+    border-radius: 10px;
+}
 
 .wrapper {
     display: flex;
@@ -9,26 +24,33 @@
 }
 
 #sidebar {
-    margin-top: 2em;
+    background-color: #e5ecee;
+    margin-top: 3em !important; 
     float: left; /* Make this div as wide as its contents */
     min-height: 96vh;
     padding-left: 1em;
-    padding-top: 3em;
+    padding-top: 1em;
     padding-right:1em;
     border-right: 0.5px solid #898c91;
 }
 
 #sidebar p {
-    padding-left: 2em;
-    padding-right:2em;
+    /* padding-left: 2em;
+    padding-right:2em; */
+    display: flex;
+    justify-content: center;
 }
 
 #sidebar p:hover {
     background-color: #ffc107;
 }
 
-#sidebar h4 {padding-left: 0.5em;}
-
+#sidebar h4 {
+    /* padding-left: 0.5em; */
+    display: flex;
+    justify-content: center;
+    padding: 5px 0;
+}
 
 #sidebar.view-sidebar {display: none;}
 
@@ -61,10 +83,10 @@
 
 #rightside-pannel {
     overflow: hidden; /* Make this div take up the rest of the horizontal space, and no more */
+    margin-top: 3em;
 }
 
 #display-message-section {
-    margin-top: 5em;
     min-height: 82vh;
     max-height: 82vh;
     overflow-y: auto; /*Make  this section scrolable */
